# BasicsOfProgrammingCourse

./: CMakeLists.txt  README.md  main.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/string/: CMakeLists.txt  string_.c  string_.h  tasks_test.c  tasks_test.h
libs/data_structures/string/ tasks/: printWordsRevers.c  printWordsRevers.h  removeAdjacentEqualLetters  removeAdjacentEqualLetters.c  removeAdjacentEqualLetters.h  removeNonLetters.c  removeNonLetters.h  replace.c  replace.h
libs/data_structures/vector/: vecrot.c  vector.h
